--- a/logbook.tex
+++ b/logbook.tex
@@ -398,7 +398,7 @@ Do not forget to cite the papers that you are using in your research, this way t
 \end{tip}
 \nocite{*}
 \bibliographystyle{alpha}
-\bibliography{mybib}
+\bibliography{../mybib}
 \clearpage
 \section{TO DO}
 \begin{tip}
